--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
   <H2>This is a Medium Header</H2>
 
   <P>
-    1. This is a new paragraph!
+    1. welcome to Queen B Facebook Workshop
   </P>
   <P>
     2. This is a new paragraph!
